continuar em casa, feito sessao com fotos

--- a/index.html
+++ b/index.html
@@ -51,7 +51,14 @@
                 </div>
             </div>
             
-
+        </section>
+        <section class="section--about">
+            <div class="container--about">
+                <div class="conteudo">
+                    <h2>Sobre nos</h2>
+                    <p>Com uma organização motivada e moderna e uma ampla rede de escritórios no exterior, o ITA fornece informação, assistência, consultoria, promoção e treinamento para pequenas e médias empresas italianas. Usando o multicanal mais moderno ferramentas de promoção e comunicação, atua para afirmar a excelência do Made in Italy no mundo.</p>
+                </div>
+            </div>
         </section>
 
         <script src="https://kit.fontawesome.com/8a96751d7a.js" crossorigin="anonymous"></script>
